; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_infinity/extr_ergodox_infinity.c_lcd_backlight_hal_color.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ergodox_infinity/extr_ergodox_infinity.c_lcd_backlight_hal_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }
%struct.TYPE_5__ = type { i8* }
%struct.TYPE_6__ = type { i8* }

@CHANNEL_RED = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@CHANNEL_GREEN = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@CHANNEL_BLUE = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lcd_backlight_hal_color(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i8* @cie_lightness(i32 %7)
  store i8* %8, i8** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CHANNEL_RED, i32 0, i32 0), align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i8* @cie_lightness(i32 %9)
  store i8* %10, i8** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @CHANNEL_GREEN, i32 0, i32 0), align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i8* @cie_lightness(i32 %11)
  store i8* %12, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @CHANNEL_BLUE, i32 0, i32 0), align 8
  ret void
}

declare dso_local i8* @cie_lightness(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
